<resources>
    <string name="app_name">Track-a-Mole</string>
    <string name="label_start">Fakestagram</string>
    <string name="label_registration">Registration</string>
    <string name="label_profile">Fakestagram Profile</string>
    <string name="label_global">Fakestagram Global Feed</string>
    <!-- Global Strings -->
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Log Out</string>
    <!-- Registration -->
    <string name="alt_option">OR</string>
    <string name="register_user">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="bio">A Short Bio</string>
    <string name="action_add_picture">Add Picture</string>
    <string name="pp_storage_name">profile_picture.jpg</string>
    <string name="physician_checkbox">Are you a physician?</string>
    <!-- Main Page-->
    <string name="new_photo">New Photo</string>
    <string name="back">Back</string>
    <string name="global_page">Global Feed</string>
    <string name="home_text_main">HOME</string>
    <string name="take_picture_btn_text">Take Picture</string>
    <string name="send_data_to_doctor_btn_text">Send Data to Doctor</string>
    <string name="history_btn_text">History</string>
    <string name="gallery_btn_text">Add from Gallery</string>
    <string name="physician_id_txt">Private ID:</string>
    <string name="physician_btn_txt">Show Patient Data</string>
    <string name="copy_btn_txt">Copy ID</string>
    <!-- Global Page-->
    <string name="main_page">Back to My Feed</string>
    <!-- Photo Page-->
    <string name="content_description">Mole Photo</string>
    <string name="auto_generate">Auto-Populate (where possible)</string>
    <string name="questionnaire_hint">Yes, No, Unsure</string>
    <string name="body_location_hint">Additional Details</string>
    <string name="mole_symmetry_q">Is the mole symmetric?</string>
    <string name="mole_evolve_q">Has the mole changed over time?</string>
    <string name="mole_colour_q">Does the mole contain multiple colours?</string>
    <string name="mole_diam_q">Is the diameter larger than 6 millimeters across?</string>
    <string name="mole_border_q">Are the edges of the mole notched, ragged or blurred?</string>
    <string name="mole_location_q">Any additional information?</string>
    <!-- Comment Page-->
    <string name="caption_default">No Caption</string>
    <string name="comments_title">Comments</string>
    <string name="comments_default">No Comments</string>
    <string name="add_comment">Add Comment</string>
    <!--    New Page-->
    <string name="add_doctor_btn">Add Doctor</string>
    <string name="prompt_physicianID">Physician Private ID</string>
    <string name="playback_history">Playback History</string>
</resources>